--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "tailwind:release": "tailwindcss -o ./public/app.css --minify"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.3",
-    "shadow-cljs": "2.22.2",
-    "tailwindcss": "^3.2.7"
+    "shadow-cljs": "^2.22.2",
+    "tailwindcss": "^3.2.7",
+    "@tailwindcss/forms": "^0.5.3"
   },
   "dependencies": {
-    "fraction.js": "^4.2.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-refresh": "^0.14.0",
+    "react-router-dom": "^6.10.0"
   }
 }
